# rusty

./: .gitignore  Cargo.toml  README.md  SKILL.md  flake.nix  rustfmt.toml
crates/rusty-cli/: Cargo.toml
crates/rusty-cli/src/: main.rs
crates/rusty-cli/tests/: check.rs
crates/rusty-core/: Cargo.toml
crates/rusty-core/src/: lib.rs
crates/rusty-core/tests/: format.rs  rules.rs
