[package]
name = "rusty-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "rusty"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
clap = { version = "4.6.1", features = ["derive"] }
rusty-core = { path = "../rusty-core" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"
